# tack-lang

./: .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.bat  build.sh  foo.lang  format.hpp  main.cpp  main.hpp  main.tack  simple.lang  util.hpp
extension/vscode/: CHANGELOG.md  language-configuration.json  package.json
extension/vscode/syntaxes/: tack.tmLanguage.json
samples/: image.tack
src/: checker.cpp  checker.hpp  checker.rs  compatibility.rs  compiler.cpp  compiler.hpp  compiler.rs  enums.hpp  evaluator.cpp  evaluator.hpp  format.hpp  graph.rs  lexer.cpp  lexer.hpp  lexer.rs  lib.rs  main.cpp  main.rs  nasm.asm  parser.cpp  parser.hpp  parser.rs  run.rs  utils.cpp  utils.hpp
test/: test-all.sh  test.sh
test/01-return/: main.lang
test/03-vars/: main.lang  main.tack
test/04-call/: main.lang
test/05-bool/: main.lang
test/06-if/: main.tack
test/07-compare/: main.lang
test/08-while/: main.tack
test/09-else/: main.tack
test/10-print/: main.tack
test/11-fib/: main.tack
tests/basics/: add.tack  array.tack  bit_ops.tack  bool.tack  bool_ops.tack  call.tack  if.tack  if_else.tack  inline_asm.tack  pointer.tack  pointer_add.tack  return.tack  scopes.tack  string_literal.tack  u8.tack  vars.tack  while.tack
tests/program/: fibonacci.tack  hello.tack
tests/structs/: basics.tack  pass_by_pointer.tack  pass_by_value.tack  pointer.tack  struct_return.tack
